[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Pieces/White/White_Pawn.png" type="Texture" id=1]
[ext_resource path="res://Pieces/Entities/PlayerPawn.gd" type="Script" id=2]
[ext_resource path="res://Pieces/Entities/Right.gd" type="Script" id=3]
[ext_resource path="res://Pieces/Entities/CaptureRight.gd" type="Script" id=4]
[ext_resource path="res://Pieces/Entities/CaptureLeft.gd" type="Script" id=5]
[ext_resource path="res://Pieces/Entities/Left.gd" type="Script" id=6]
[ext_resource path="res://Pieces/Entities/Up.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.5, 12.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="WhitePawn" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PossibleMoves" type="Area2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="PossibleMoves"]
position = Vector2( 64, 0 )
shape = SubResource( 2 )
script = ExtResource( 3 )

[node name="Left" type="CollisionShape2D" parent="PossibleMoves"]
position = Vector2( -64, 0 )
shape = SubResource( 2 )
script = ExtResource( 6 )

[node name="Up" type="CollisionShape2D" parent="PossibleMoves"]
position = Vector2( 0, -64 )
shape = SubResource( 2 )
script = ExtResource( 7 )

[node name="CaptureLeft" type="CollisionShape2D" parent="PossibleMoves"]
position = Vector2( -64, -64 )
shape = SubResource( 2 )
script = ExtResource( 5 )

[node name="CaptureRight" type="CollisionShape2D" parent="PossibleMoves"]
position = Vector2( 64, -64 )
shape = SubResource( 2 )
script = ExtResource( 4 )
